module-2/manifests/cni/web-b-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-b
  namespace: ns-b
spec:
  clusterIP: None
  selector:
    run: web-b
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
