module-2/manifests/cni/deny-ns-b.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: ns-b
spec:
  podSelector: {}
  policyTypes:
    - Ingress
